wubi (12.10) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Version bump to 12.10 (Quantal).
  * Drop Wubi for Xubuntu at the request of Pasi Lallinaho.

  [ Colin Watson ]
  * Update translations from Launchpad.
  * Adjust isolist.ini to reflect the move of Kubuntu releases to
    cdimage.ubuntu.com in 12.04.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 06 Jun 2012 14:54:06 +0100

wubi (12.04) precise; urgency=low

  [ bcbc ]
  * Correct NameError exceptions on missing attributes
    when running CD boot helper or a CD is rejected (LP: #876154).
  * Ignore Permission denied when copying wubildr everywhere
    (LP: #862003)
  * Don't fail if Windows' startup folder is missing or mis-
    configured (LP: #910948)
  * If bcdedit fails when uninstalling, it shouldn't be fatal
    (LP: #925779)
  * Don't use the diskimage download when the target 
    partition is FAT32 (LP: #882393).
  * Suppress "No Disk" popup errors for unsupported devices.
    Thanks to William Bass for the patch (LP: #365881).

  [ Evan Dandrea ]
  * Remove partially downloaded files that Windows does not consider
    files when the bit torrent tracker falls over (LP: #873268).
  * Don't assume success if the disk image download fails without
    raising an exception (LP: #924752).
  * Hide Wubi from the autorun page, per LP: #975251.
  * Do not use the CD by default if we are not running Wubi from that
    same CD.
  * Remove the minimum ISO size check. This will fail on USB disks
    written into ISOs as part of the CD boot helper. It's not entirely
    clear why this was added in the first place (LP: #987402).

  [ Stéphane Graber ]
  * Add Edubuntu support.

  [ Colin Watson ]
  * Bump to 12.04.
  * Add Lubuntu support (LP: #907524).

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 01 Feb 2012 16:31:48 +0000

wubi (11.10) oneiric; urgency=low

  [ Colin Watson ]
  * Bump to 11.10.
  * Remove Ubuntu Netbook option, which is no longer a separate CD
    (LP: #772941).