@@ -301,6 +301,8 @@ lang_country2linux_locale = {
     "bg_BG" : "bg_BG.UTF-8",
     "bn_BD" : "bn_BD",
     "bn_IN" : "bn_IN",
+    "bo_CN" : "bo_CN",
+    "bo_IN" : "bo_IN",
     "br_FR" : "br_FR.UTF-8",
     "bs_BA" : "bs_BA.UTF-8",
     "byn_ER" : "byn_ER",
@@ -955,6 +957,8 @@ language2lang_country = {
     "Bulgarian (BG)" : "bg_BG",
     "Bengali (BD)" : "bn_BD",
     "Bengali (IN)" : "bn_IN",
+    "Tibetan (CN)" : "bo_CN",
+    "Tibetan (IN)" : "bo_IN",
     "Breton (FR)" : "br_FR",
     "Bosnian (BA)" : "bs_BA",
     "Bosnian (ER)" : "byn_ER",
@@ -1134,6 +1138,7 @@ language2lang_country = {
     "Bulgarian" : "bg_BG",
     "Bengali" : "bn_BD",
     "Breton" : "br_FR",
+    "Tibetan" : "bo_CN",
     "Bosnian" : "bs_BA",
     "Catalan" : "ca_ES",
     "Chinese (CN)": "zh_CN",
